--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
       <label>webcam view</label><div id="camera"></div>
       <button onclick="takesnapshot()" class="btn btn-info">Captuure Image</button>
     </div>
+    <div class="col-sm-6 col-xs-12 maindiv">
+      <label>Snapshot</label><div id="camera_result"></div>
+      <button onclick="identifyimage()" class="btn btn-success">Identify Image</button>
+    </div>
     </center>
-
-
+  <div class="col-xs-12 footer_div"><h4 class="col-sm-6 col-xs-12"><img src="blub.gif">
+    <span id="object_name"></span></h4></div>
+<div class="copyright">Developed by Neemay Thakker</div>
     
 <script src="main.js"></script>
   </body>
